--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,8 @@
         <item>@drawable/chicken_steak</item>
         <item>@drawable/mie_hotplate</item>
         <item>@drawable/kwetiaw_hotplate</item>
+        <item>@drawable/nasgor_ayam</item>
+        <item>@drawable/nasgor_ayam</item>
     </array>
 
     <array name="image_top_drink">
@@ -49,8 +51,6 @@
         <item>@drawable/fruit_tea_kotak</item>
         <item>@drawable/lemon_tea</item>
         <item>@drawable/teh_kotak</item>
-        <item>@drawable/milkshake_strawberry</item>
-        <item>@drawable/milkshake_coklat</item>
         <item>@drawable/milkshake_coklat</item>
         <item>@drawable/jus_alpukat</item>
         <item>@drawable/jus_wortel</item>
@@ -59,6 +59,7 @@
         <item>@drawable/jus_melon</item>
         <item>@drawable/jus_tomat</item>
         <item>@drawable/cappucino</item>
+        <item>@drawable/kopi</item>
         <item>@drawable/tebs</item>
     </array>
 
@@ -78,74 +79,23 @@
         <item>@drawable/nasgor_special</item>
         <item>@drawable/mie_goreng_special</item>
         <item>@drawable/kwetiaw_goreng_special</item>
+        <item>@drawable/nasgor_special</item>
+        <item>@drawable/mie_goreng_special</item>
+        <item>@drawable/kwetiaw_goreng_special</item>
+        <item>@drawable/nasgor_sosis</item>
+        <item>@drawable/nasgor_nugget</item>
         <item>@drawable/nasi_putih</item>
         <item>@drawable/telor_ceplok</item>
         <item>@drawable/krupuk_tengiri</item>
+        <item>@drawable/krupuk_tengiri</item>
         <item>@drawable/kerupuk_udang</item>
+        <item>@drawable/keripik_usus</item>
+        <item>@drawable/keripik_usus</item>
         <item>@drawable/kacang_kecil</item>
         <item>@drawable/mente</item>
         <item>@drawable/logo_top</item>
+
     </array>
-
-    <string-array name="name_top_food">
-        <item>NASI GORENG TOP</item>
-        <item>NASI GORENG KABITA</item>
-        <item>NASI GORENG SPECIAL</item>
-        <item>NASI GORENG AYAM</item>
-        <item>NASI GORENG MAWUT</item>
-        <item>NASI GORENG SEAFOOD</item>
-        <item>NASI GORENG BAKSO</item>
-        <item>NASI GORENG PEDAS</item>
-        <item>NASI GORENG NUGGET</item>
-        <item>NASI GORENG SOSIS</item>
-        <item>NASI GORENG UDANG</item>
-        <item>NASI GORENG IKAN ASIN</item>
-        <item>NASI GORENG PETE</item>
-        <item>MIE GORENG AYAM</item>
-        <item>MIE GORENG TOP</item>
-        <item>MIE GORENG SPECIAL</item>
-        <item>MIE GORENG SEAFOOD</item>
-        <item>MIE KUAH AYAM</item>
-        <item>MIE KUAH TOP</item>
-        <item>BIHUN GORENG</item>
-        <item>CAPJAY</item>
-        <item>MIE CAPJAY</item>
-        <item>NASI CAPJAY</item>
-        <item>TAMI CAPJAY</item>
-        <item>KWETIAW GORENG AYAM</item>
-        <item>KWETIAW GORENG TOP</item>
-        <item>KWETIAW GORENG SPECIAL</item>
-        <item>KWETIAW GORENG SEAFOOD</item>
-        <item>BAKSO</item>
-        <item>BAKSO JUMBO</item>
-        <item>CHICKEN STEAK</item>
-        <item>MIE HOTPLATE</item>
-        <item>KWETIAW HOTPLATE</item>
-    </string-array>
-
-    <string-array name="name_top_drink">
-        <item>AIR MINERAL</item>
-        <item>TEH HANGAT</item>
-        <item>ES TEH</item>
-        <item>JERUK HANGAT</item>
-        <item>ES JERUK</item>
-        <item>TEH BOTOL</item>
-        <item>FRUIT TEA</item>
-        <item>FRUIT TEA KOTAK</item>
-        <item>LEMON TEA</item>
-        <item>TEH KOTAK</item>
-        <item>MILKSHAKE STRAWBERRY</item>
-        <item>MILKSHAKE COKLAT</item>
-        <item>MILKSHAKE CAPPUCINO</item>
-        <item>JUS ALPUKAT</item>
-        <item>JUS WORTEL</item>
-        <item>JUS JAMBU MERAH</item>
-        <item>JUS JERUK</item>
-        <item>JUS MELON</item>
-        <item>JUS TOMAT</item>
-        <item>CAPPUCINO</item>
-        <item>TEBS</item>
-    </string-array>
 
     <string-array name="name_top_other">
         <item>PAKET EKONOMIS 1</item>
@@ -163,151 +113,196 @@
         <item>PAKET KABITA SPECIAL 1</item>
         <item>PAKET KABITA SPECIAL 2</item>
         <item>PAKET KABITA SPECIAL 3</item>
+        <item>PAKET RAMADHAN 1</item>
+        <item>PAKET RAMADHAN 2</item>
+        <item>PAKET RAMADHAN 3</item>
+        <item>PAKET MERDEKA A</item>
+        <item>PAKET MERDEKA B</item>
         <item>NASI PUTIH</item>
         <item>TELOR CEPLOK</item>
-        <item>KERUPUK MEJA</item>
-        <item>KERUPUK UDANG</item>
+        <item>KRUPUK RAMBAK</item>
+        <item>KRUPUK MEJA</item>
+        <item>KRUPUK UDANG</item>
+        <item>USUS</item>
+        <item>USUS KECIL</item>
         <item>KACANG KECIL</item>
         <item>MENTE</item>
         <item>PEMBUNGKUS</item>
     </string-array>
 
+    <string-array name="name_top_food">
+        <item>NASI GORENG TOP</item>
+        <item>NASI GORENG KABITA</item>
+        <item>NASI GORENG SPESIAL</item>
+        <item>NASI GORENG AYAM</item>
+        <item>NASI GORENG MAWUT</item>
+        <item>NASI GORENG SEAFOOD</item>
+        <item>NASI GORENG BAKSO</item>
+        <item>NASI GORENG HOT</item>
+        <item>NASI GORENG NUGGET</item>
+        <item>NASI GORENG SOSIS</item>
+        <item>NASI GORENG UDANG</item>
+        <item>NASI GORENG IKAN ASIN</item>
+        <item>NASI GORENG PETE</item>
+        <item>MIE GORENG AYAM</item>
+        <item>MIE GORENG TOP</item>
+        <item>MIE GORENG SPESIAL</item>
+        <item>MIE GORENG SEAFOOD</item>
+        <item>MIE KUAH AYAM</item>
+        <item>MIE KUAH TOP</item>
+        <item>BIHUN GORENG</item>
+        <item>CAP CAY</item>
+        <item>MIE CAP CAY</item>
+        <item>NASI CAP CAY</item>
+        <item>TAMI CAP CAY</item>
+        <item>KWETIAW GORENG AYAM</item>
+        <item>KWETIAW GORENG TOP</item>
+        <item>KWETIAW GORENG SPESIAL</item>
+        <item>KWETIAW GORENG SEAFOOD</item>
+        <item>BAKSO</item>
+        <item>BAKSO JUMBO</item>
+        <item>CHICKEN STEAK</item>
+        <item>MIE HOT PLATE</item>
+        <item>KWETIAW HOT PLATE</item>
+        <item>GEPREK BESAR</item>
+        <item>GEPREK KECIL</item>
+    </string-array>
+
     <string-array name="price_top_food">
-        <item>18</item>
-        <item>12</item>
-        <item>18</item>
-        <item>14</item>
-        <item>14</item>
-        <item>18</item>
-        <item>14</item>
+        <item>20</item>
+        <item>13</item>
+        <item>20</item>
+        <item>16</item>
+        <item>16</item>
+        <item>20</item>
+        <item>16</item>
         <item>10</item>
-        <item>18</item>
-        <item>14</item>
-        <item>18</item>
-        <item>14</item>
-        <item>14</item>
-        <item>15</item>
-        <item>18</item>
-        <item>18</item>
-        <item>18</item>
-        <item>15</item>
-        <item>18</item>
-        <item>15</item>
-        <item>15</item>
+        <item>20</item>
         <item>16</item>
+        <item>20</item>
+        <item>17</item>
         <item>16</item>
-        <item>16</item>
-        <item>15</item>
+        <item>17</item>
+        <item>21</item>
+        <item>21</item>
+        <item>21</item>
+        <item>17</item>
+        <item>20</item>
+        <item>17</item>
         <item>18</item>
-        <item>18</item>
-        <item>18</item>
+        <item>19</item>
+        <item>22</item>
+        <item>22</item>
+        <item>17</item>
+        <item>21</item>
+        <item>21</item>
+        <item>21</item>
         <item>12</item>
+        <item>15</item>
+        <item>17</item>
+        <item>18</item>
+        <item>18</item>
+        <item>18</item>
+        <item>16</item>
+    </string-array>
+
+    <string-array name="price_gojek_food">
+        <item>24</item>
+        <item>16</item>
+        <item>24</item>
+        <item>19</item>
+        <item>19</item>
+        <item>24</item>
+        <item>19</item>
+        <item>12</item>
+        <item>24</item>
+        <item>19</item>
+        <item>24</item>
+        <item>20</item>
+        <item>19</item>
+        <item>20</item>
+        <item>25</item>
+        <item>25</item>
+        <item>25</item>
+        <item>20</item>
+        <item>24</item>
+        <item>20</item>
+        <item>22</item>
+        <item>23</item>
+        <item>26</item>
+        <item>26</item>
+        <item>20</item>
+        <item>26</item>
+        <item>26</item>
+        <item>26</item>
         <item>14</item>
-        <item>17</item>
-        <item>17</item>
-        <item>17</item>
+        <item>18</item>
+        <item>20</item>
+        <item>22</item>
+        <item>22</item>
+        <item>22</item>
+        <item>19</item>
+    </string-array>
+
+    <string-array name="name_top_drink">
+        <item>AIR MINERAL</item>
+        <item>TEH HANGAT</item>
+        <item>ES TEH</item>
+        <item>JERUK HANGAT</item>
+        <item>ES JERUK</item>
+        <item>TEH BOTOL</item>
+        <item>FRUIT TEA</item>
+        <item>FRUIT TEA KOTAK</item>
+        <item>LEMON TEA</item>
+        <item>TEH KOTAK</item>
+        <item>MILKSHAKE</item>
+        <item>JUS ALPUKAT</item>
+        <item>JUS WORTEL</item>
+        <item>JUS JAMBU MERAH</item>
+        <item>JUS JERUK</item>
+        <item>JUS MELON</item>
+        <item>JUS TOMAT</item>
+        <item>CAPPUCINO</item>
+        <item>KOPI</item>
+        <item>TEBS</item>
     </string-array>
 
     <string-array name="price_top_drink">
         <item>5</item>
         <item>5</item>
-        <item>5</item>
         <item>6</item>
-        <item>6</item>
+        <item>7</item>
+        <item>7</item>
         <item>5</item>
         <item>5</item>
         <item>4</item>
-        <item>6</item>
+        <item>7</item>
         <item>4</item>
-        <item>8</item>
-        <item>8</item>
-        <item>8</item>
+        <item>10</item>
         <item>14</item>
         <item>10</item>
         <item>12</item>
         <item>10</item>
         <item>10</item>
         <item>10</item>
-        <item>6</item>
-        <item>5</item>
-    </string-array>
-
-    <string-array name="price_top_other">
-        <item>16</item>
-        <item>17</item>
-        <item>16</item>
-        <item>19</item>
-        <item>13</item>
-        <item>17</item>
-        <item>15</item>
-        <item>14</item>
-        <item>12</item>
-        <item>13</item>
-        <item>13</item>
-        <item>14</item>
-        <item>14</item>
-        <item>15</item>
-        <item>15</item>
+        <item>7</item>
         <item>5</item>
         <item>5</item>
-        <item>5</item>
-        <item>1</item>
-        <item>1</item>
-        <item>5</item>
-        <item>1</item>
-    </string-array>
-
-    <string-array name="price_gojek_food">
-        <item>22</item>
-        <item>14</item>
-        <item>22</item>
-        <item>17</item>
-        <item>17</item>
-        <item>22</item>
-        <item>17</item>
-        <item>13</item>
-        <item>22</item>
-        <item>17</item>
-        <item>22</item>
-        <item>17</item>
-        <item>17</item>
-        <item>18</item>
-        <item>22</item>
-        <item>22</item>
-        <item>22</item>
-        <item>18</item>
-        <item>22</item>
-        <item>18</item>
-        <item>18</item>
-        <item>20</item>
-        <item>20</item>
-        <item>20</item>
-        <item>18</item>
-        <item>22</item>
-        <item>22</item>
-        <item>22</item>
-        <item>15</item>
-        <item>17</item>
-        <item>21</item>
-        <item>21</item>
-        <item>21</item>
     </string-array>
 
     <string-array name="price_gojek_drink">
-        <item>10</item>
+        <item>6</item>
+        <item>6</item>
+        <item>6</item>
         <item>8</item>
-        <item>10</item>
-        <item>9</item>
         <item>8</item>
-        <item>10</item>
-        <item>10</item>
-        <item>9</item>
+        <item>6</item>
+        <item>6</item>
+        <item>6</item>
         <item>8</item>
-        <item>9</item>
-        <item>10</item>
-        <item>10</item>
-        <item>10</item>
-        <item>15</item>
+        <item>6</item>
+        <item>12</item>
+        <item>17</item>
         <item>12</item>
         <item>15</item>
         <item>12</item>
@@ -315,6 +310,40 @@
         <item>12</item>
         <item>8</item>
         <item>10</item>
+        <item>10</item>
+    </string-array>
+
+    <string-array name="price_top_other">
+        <item>17</item>
+        <item>18</item>
+        <item>18</item>
+        <item>19</item>
+        <item>14</item>
+        <item>18</item>
+        <item>16</item>
+        <item>17</item>
+        <item>12</item>
+        <item>13</item>
+        <item>13</item>
+        <item>14</item>
+        <item>18</item>
+        <item>20</item>
+        <item>20</item>
+        <item>17</item>
+        <item>18</item>
+        <item>18</item>
+        <item>17</item>
+        <item>22</item>
+        <item>5</item>
+        <item>5</item>
+        <item>6</item>
+        <item>5</item>
+        <item>1</item>
+        <item>10</item>
+        <item>5</item>
+        <item>1</item>
+        <item>5</item>
+        <item>1</item>
     </string-array>
 
     <string-array name="price_gojek_other">
@@ -324,19 +353,27 @@
         <item>19</item>
         <item>13</item>
         <item>17</item>
-        <item>15</item>
-        <item>14</item>
+        <item>19</item>
+        <item>20</item>
         <item>12</item>
         <item>13</item>
         <item>13</item>
         <item>14</item>
-        <item>14</item>
-        <item>15</item>
-        <item>15</item>
-        <item>4</item>
-        <item>4</item>
+        <item>18</item>
+        <item>20</item>
+        <item>20</item>
+        <item>17</item>
+        <item>18</item>
+        <item>18</item>
+        <item>17</item>
+        <item>22</item>
+        <item>6</item>
+        <item>6</item>
+        <item>6</item>
         <item>5</item>
         <item>1</item>
+        <item>10</item>
+        <item>5</item>
         <item>1</item>
         <item>5</item>
         <item>1</item>
@@ -363,5 +400,9 @@
     <string name="discount">Discount</string>
     <string name="voucher">Voucher</string>
     <string name="cek_total_sales">Cek Total Sales</string>
+    <string name="nama_menu">Nama Menu</string>
+    <string name="harga">Harga</string>
+    <string name="harga_gojek">Harga Gojek</string>
+    <string name="buat">Buat</string>
 
 </resources>
